# temporal-hack

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  ONBOARDING.md  README.md  go.work  go.work.sum  setup-precommit.sh
.claude/: settings.json
.claude/hooks/: require-branch.sh
.claude/skills/: docker-dev  instruct  manage-precommit  new-project  op-init  push-it
.git-hooks/: _installer-smoke.sh  commit-msg  installer-smoke.sh  pre-commit  pre-push
.github/workflows/: ci.yml
.opencode/skills/: architect  ci-cd  commit-it  go  ship-it
agent/: go.mod  go.sum
bridge/: pyproject.toml
bridge/bridge_node/: collision_publisher.py  server.py  sim_battery.py  twist_subscriber.py
bridge/bridge_node/proto/: agent_bridge_pb2.py  agent_bridge_pb2_grpc.py  ota_pb2.py  ota_pb2_grpc.py  telemetry_pb2.py  telemetry_pb2_grpc.py
cloud/: go.mod  go.sum
deploy/mqtt/: emqx.conf  emqx.conf.example
deploy/postgres/: init-ota.sql  init-telemetry.sql  init-temporal.sql
deploy/temporal/: dynamicconfig.yaml
docker/dummy-robot/: Dockerfile
docker/gazebo/: Dockerfile  entrypoint.sh
docker/robot/: Dockerfile  entrypoint.sh
docker/sim/: Dockerfile  entrypoint.sh
installer/: README.md
installer/docker-compose/: docker-compose.ci.yml  docker-compose.sim.yml  (+1 more)
proto/: agent_bridge.proto  ota.proto  telemetry.proto
sim/: README.md
specs/: decision-tree.md  decisions.md  overview.md  project-plan.md  threat-model.md
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+66 files in other folders)
